[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerbernetix.mltoolkit"
version = "0.0.0"
authors = [{ name = "Jean-Sébastien CONAN", email = "jsconan@gmail.com" }]
description = "A set of utilities for machine learning projects in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cerbernetix/py-mltoolkit"
"Bug Tracker" = "https://github.com/cerbernetix/py-mltoolkit/issues"

[project.optional-dependencies]
linting = ['pylint==3.3.1']
formatting = ['black==24.10.0']
dev = ["pylint==3.3.1"]
test = ["coverage==7.6.4", "snapshottest==0.6.0"]

[tool.pylint]
max-line-length = 100
disable = [
  "R0903", # (too-few-public-methods)
  "R0913", # (too-many-arguments)
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["src"]

[tool.coverage.paths]
source = ["src"]
tests = ["tests/"]
